adding more skill

--- a/style.css
+++ b/style.css
@@ -206,6 +206,8 @@ body{
 
 .tentang img{
     width: 280px;
+    border-radius: 14px;
+    box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .tentang .info h3{
