--- a/others/css/main.css
+++ b/others/css/main.css
@@ -176,6 +176,7 @@ footer .cols .col-notif form{
 footer .cols .col-notif form input{
     width: 100%;
     background: var(--bg-clr);
+    color: var(--text);
     border: none;
     padding: 13px;
     border-radius: 100px;
