--- a/style.css
+++ b/style.css
@@ -115,6 +115,13 @@ body{
     height: 200px;
     margin-top: 100px;
     border-radius: 50%;
+    transform: scale(1.03) perspective(200px);
+    transition: var(--all-tran);
+    cursor: pointer;
+}
+
+.main img:hover{
+    transform: scale(1.1) perspective(2500px) rotateY(5deg);
 }
 
 .terjamin{
@@ -378,6 +385,7 @@ footer .cols .col-notif form{
 footer .cols .col-notif form input{
     width: 100%;
     background: var(--bg-clr);
+    color: var(--text);
     border: none;
     padding: 13px;
     border-radius: 100px;
