--- a/others/css/kontak.css
+++ b/others/css/kontak.css
@@ -32,7 +32,7 @@
     height: 300px;
     margin-top: 100px;
     border-radius: 50%;
-    background: url("/images/anam.jpg");
+    background: url("../images/anam.jpg");
     background-position: center;
     background-size: cover;
     transform: scale(1.03) perspective(200px);
